--- a/English.lproj/BackingView.xib
+++ b/English.lproj/BackingView.xib
@@ -614,7 +614,7 @@
 				</object>
 				<string key="50.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="51.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="59.CustomClassName">RadialGradiantBox</string>
+				<string key="59.CustomClassName">RadialGradientBox</string>
 				<string key="59.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="77.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="78.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1180,7 +1180,7 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">RadialGradiantBox</string>
+					<string key="className">RadialGradientBox</string>
 					<string key="superclassName">NSBox</string>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">centeringObject</string>
@@ -1194,8 +1194,8 @@
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">Classes/UtilityClasses/RadialGradiantBox/RadialGradiantBox.h</string>
+						<string key="majorKey">IBUserSource</string>
+						<string key="minorKey"/>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
