--- a/English.lproj/FilesViewOutline.xib
+++ b/English.lproj/FilesViewOutline.xib
@@ -12,7 +12,7 @@
     </object>
     <object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
       <bool key="EncodedWithXMLCoder">YES</bool>
-      <integer value="1"/>
+      <integer value="9"/>
     </object>
     <object class="NSArray" key="IBDocument.PluginDependencies">
       <bool key="EncodedWithXMLCoder">YES</bool>
@@ -298,7 +298,7 @@
           <string>FSViewerOutline</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-          <string>FSViewerPaneIconedCell</string>
+          <string>FSViewerOutlinePaneIconedCell</string>
           <string>com.apple.InterfaceBuilder.CocoaPlugin</string>
         </object>
       </object>
@@ -332,12 +332,17 @@
           </object>
         </object>
         <object class="IBPartialClassDescription">
-          <string key="className">FSViewerPaneCell</string>
-          <string key="superclassName">NSTextFieldCell</string>
+          <string key="className">FSViewerOutlinePaneIconedCell</string>
+          <string key="superclassName">FSViewerPaneIconedCell</string>
           <object class="IBClassDescriptionSource" key="sourceIdentifier" id="548655600">
             <string key="majorKey">IBProjectSource</string>
             <string key="minorKey">Classes/FilesView/FSViewerPaneCell.h</string>
           </object>
+        </object>
+        <object class="IBPartialClassDescription">
+          <string key="className">FSViewerPaneCell</string>
+          <string key="superclassName">NSTextFieldCell</string>
+          <reference key="sourceIdentifier" ref="548655600"/>
         </object>
         <object class="IBPartialClassDescription">
           <string key="className">FSViewerPaneIconedCell</string>
@@ -423,13 +428,6 @@
           <object class="IBClassDescriptionSource" key="sourceIdentifier">
             <string key="majorKey">IBFrameworkSource</string>
             <string key="minorKey">AppKit.framework/Headers/NSUserInterfaceItemSearching.h</string>
-          </object>
-        </object>
-        <object class="IBPartialClassDescription">
-          <string key="className">NSApplication</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
-            <string key="majorKey">IBFrameworkSource</string>
-            <string key="minorKey">BWToolkitFramework.framework/Headers/NSApplication+BWAdditions.h</string>
           </object>
         </object>
         <object class="IBPartialClassDescription">
@@ -958,13 +956,6 @@
           <string key="className">NSView</string>
           <string key="superclassName">NSResponder</string>
           <reference key="sourceIdentifier" ref="205875536"/>
-        </object>
-        <object class="IBPartialClassDescription">
-          <string key="className">NSView</string>
-          <object class="IBClassDescriptionSource" key="sourceIdentifier">
-            <string key="majorKey">IBFrameworkSource</string>
-            <string key="minorKey">BWToolkitFramework.framework/Headers/NSView+BWAdditions.h</string>
-          </object>
         </object>
         <object class="IBPartialClassDescription">
           <string key="className">NSViewController</string>
